draft scenarios starting units rephrasing (#403)
Co-authored-by: qwrtln <qwrtln@users.noreply.github.com>

--- a/draft-scenarios/campaigns/rampart_graduation_exercise.tex
+++ b/draft-scenarios/campaigns/rampart_graduation_exercise.tex
@@ -35,7 +35,7 @@ This Scenario plays out over 13 Rounds.
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
-\textbf{Starting Units:} A Few Centaurs, a Few Dwarves, a Pack of Elves, a Few Pegasi
+\textbf{Starting Units:} A ``Few'' Centaurs, a ``Few'' Dwarves, a ``Pack'' of Elves and a ``Few'' Pegasi
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, \svg{silver} Dwelling, Mystic Pond
 
@@ -85,7 +85,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 Place Necropolis, Inferno, and Dungeon Heroes in their respective Faction Towns.
 Place Gelu on the center Field of the Rampart S4 Starting Map Tile.
 Place either Mephala or Clancy on an empty Field of the F10 Map Tile.
-Place the Pack of Medusas on the Far Map Tile as indicated in the Scenario map layout.
+Place the ``Pack'' of Medusas on the Far Map Tile as indicated in the Scenario map layout.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
@@ -166,8 +166,8 @@ During this Scenario:
       \includegraphics[width=\textwidth]{\maps/rampart_graduation_exercise.png}
     };
     \node at (1.3,-1.4) {\large{{\textbf{\textcolor{darkcandyapplered}{S4}}}}};
-    \node at (3.3,0.5) {\large{{\textbf{\textcolor{darkcandyapplered}{Pack of}}}}};
-    \node at (3.3,0) {\large{{\textbf{\textcolor{darkcandyapplered}{Medusas}}}}};
+    \node at (3.2, 0.5) {\large{{\textbf{\textcolor{darkcandyapplered}{``Pack'' of}}}}};
+    \node at (3.3, 0) {\large{{\textbf{\textcolor{darkcandyapplered}{Medusas}}}}};
     \node at (15.6, -1.4) {\large{{\textbf{\textcolor{darkcandyapplered}{F10}}}}};
     \node at (3.5, -5.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N3}}}}};
     \node at (15.6, -5.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N5}}}}};
@@ -189,17 +189,17 @@ During this Scenario:
     \begin{tabularx}{0.95\linewidth}{>{\centering}p{0.15\linewidth}>{\raggedright\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X}
       \darkcell{Faction} & \darkcell{Units} & \darkcell{AI Deck} & \darkcell{Spells} \\
       \darkcell[2.8]{Necropolis}
-      & \lightcell[2.8]{Pack of Zombies\\Pack of Wraiths\\Pack of Liches\\Few Dread Knights\\Walls and Gate}
-      & \lightcell[2.8]{1~×~Might \svg{might-yellow} Card\\3~×~Magic \svg{magic-yellow} Card}
-      & \lightcell[2.8]{1~×~Resurrection\\1~×~Haste\\1~×~Weakness} \\
+      & \lightcellleft[2.8]{``Pack'' of Zombies\\``Pack'' of Wraiths\\``Pack'' of Liches\\``Few'' Dread Knights\\Walls and Gate}
+      & \lightcellleft[2.8]{1~×~Might \svg{might-yellow} Card\\3~×~Magic \svg{magic-yellow} Card}
+      & \lightcellleft[2.8]{1~×~Resurrection\\1~×~Haste\\1~×~Weakness} \\
       \darkcell[2.8]{Inferno}
-      & \lightcell[2.8]{Pack of Magogs\\Pack of Cerberi\\Pack of Pit Lords\\Few Efreet\\Walls and Gate}
-      & \lightcell[2.8]{3~×~Might \svg{might-yellow} Card\\1~×~Magic \svg{magic-yellow} Card}
-      & \lightcell[2.8]{1~×~Fireball} \\
+      & \lightcellleft[2.8]{``Pack'' of Magogs\\``Pack'' of Cerberi\\``Pack'' of Pit Lords\\``Few'' Efreet\\Walls and Gate}
+      & \lightcellleft[2.8]{3~×~Might \svg{might-yellow} Card\\1~×~Magic \svg{magic-yellow} Card}
+      & \lightcellleft[2.8]{1~×~Fireball} \\
       \darkcell[3.2]{Dungeon}
-      & \lightcell[3.2]{Pack of Harpies\\Pack of Evil Eyes\\Pack of Medusas\\Few Manticores\\Few Black Dragons\\Walls and Gate}
-      & \lightcell[3.2]{3~×~Might \svg{might-yellow} Card\\3~×~Magic \svg{magic-yellow} Card}
-      & \lightcell[3.2]{1~×~Magic Arrow\\1~×~Slow\\1~×~Sorrow} \\
+      & \lightcellleft[3.2]{``Pack'' of Harpies\\``Pack'' of Evil Eyes\\``Pack'' of Medusas\\``Few'' Manticores\\``Few'' Black Dragons\\Walls and Gate}
+      & \lightcellleft[3.2]{3~×~Might \svg{might-yellow} Card\\3~×~Magic \svg{magic-yellow} Card}
+      & \lightcellleft[3.2]{1~×~Magic Arrow\\1~×~Slow\\1~×~Sorrow} \\
     \end{tabularx}
   }
 \end{table*}
@@ -227,7 +227,7 @@ Before you even get a chance to turn back, more than two dozen Medusae slither o
 \textcolor{darkcandyapplered}{
 \begin{itemize}
     \item Medusas remain in their spot on the Far Map Tile regardless of how the Map Tile is rotated after discovery.
-    \item Combat with a Pack of Medusas requires no additional \svg{movement-red}.
+    \item Combat with a ``Pack'' of Medusas requires no additional \svg{movement-red}.
     \item If a Neutral army is also present on this Map Tile, it must be battled separately after the Medusas are defeated.
 \end{itemize}
 }
@@ -250,7 +250,7 @@ You receive an eerie feeling from the box before you.
 A glow pulsates around it and an odd colored fog issues forth from its cracks.
 \textcolor{darkcandyapplered}{
 \begin{itemize}
-    \item Start Combat with a Pack of Efreet and a Pack of Genies instead of the standard Neutral army.
+    \item Start Combat with a ``Pack'' of Efreet and a ``Pack'' of Genies instead of the standard Neutral army.
     \item In addition to the Field reward, gain 1 \svg{valuables}.
 \end{itemize}
 }
