--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -20,13 +20,13 @@ This Scenario plays out over 13 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item ``Few'' of the cheapest \svg{silver} Units
+  \item A ``Few'' of the cheapest \svg{silver} Units
 \end{itemize}
 
 \textbf{Town Buildings:}
 \begin{itemize}
   \item Each player may build the \svg{building_special_tent} building at a discount of 2~\svg{gold} and 2~\svg{building_materials}, \textbf{or} gain 4~\svg{gold}.
-  \item Citadel and gain 2~\svg{gold}, \textbf{or} \\
+  \item Citadel and lose 2~\svg{gold}, \textbf{or} \\
     Mage Guild and gain 2~\svg{valuables}.
 \end{itemize}
 
