--- a/draft-scenarios/clash/treasure_island.tex
+++ b/draft-scenarios/clash/treasure_island.tex
@@ -22,8 +22,8 @@ This Scenario plays out over 12 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \svg{bronze} Units with the \textit{highest} Recruitment cost
-  \item A Pack of \svg{bronze} Units with the \textit{lowest} Recruitment cost
+  \item A ``Few'' of the most expensive \svg{bronze} Units
+  \item A ``Pack'' of the cheapest \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:}
