--- a/draft-scenarios/campaigns/rampart_cutthroats.tex
+++ b/draft-scenarios/campaigns/rampart_cutthroats.tex
@@ -26,7 +26,7 @@ This Scenario plays out over 16 Rounds.
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
-\textbf{Starting Units:} One player takes 1, the other player takes 2 of the following: a Few Centaurs, a Few Elves, a Few Pegasi
+\textbf{Starting Units:} One player takes 1, the other player takes 2 of the following: a ``Few'' Centaurs, a ``Few'' Elves and a ``Few'' Pegasi
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
 
