--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -22,8 +22,8 @@ This Scenario is played over 12 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \svg{bronze} Units of your choice
-  \item A Pack of \svg{bronze} Units of your choice
+  \item A ``Few'' chosen \svg{bronze} Units
+  \item A ``Pack'' of chosen \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling
