--- a/draft-scenarios/clash/blood_for_ore.tex
+++ b/draft-scenarios/clash/blood_for_ore.tex
@@ -19,7 +19,7 @@ This Scenario plays out over 8-10 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item 2 × Pack of chosen \svg{bronze} Units
+  \item A ``Pack'' of chosen \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:}
