[PL] po4a fix with final adjustments

--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-12-19 07:58+0000\n"
+"POT-Creation-Date: 2025-12-19 15:06+0000\n"
 "PO-Revision-Date: 2025-05-04 14:05+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -43,6 +43,24 @@ msgid ""
 "\n"
 msgstr ""
 "{2}\n"
+"\n"
+
+#. type: multicols*
+#: coops/sentinels.tex:32 clash/bloody_grail.tex:27 clash/the_hunt.tex:29
+#, fuzzy, no-wrap
+msgid ""
+"\\textbf{Starting Units:}\n"
+"\\begin{itemize}\n"
+"  \\item A ``Pack'' of the cheapest \\svg{bronze} Units\n"
+"  \\item A ``Few'' of the most expensive \\svg{bronze} Units\n"
+"\\end{itemize}\n"
+"\n"
+msgstr ""
+"\\textbf{Úvodní Jednotky:}\n"
+"\\begin{itemize}\n"
+"  \\item 1 × Hrstku nejlevnějších \\svg{bronze} Jednotek\n"
+"  \\item 1 × Hrstku nejlevnějších \\svg{silver} Jednotek\n"
+"\\end{itemize}\n"
 "\n"
 
 #. type: multicols
@@ -156,31 +174,6 @@ msgid ""
 "\n"
 msgstr ""
 "\\textbf{Úvodní Suroviny:} 13 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
-"\n"
-
-#. type: multicols*
-#: clash/bloody_grail.tex:27
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Units:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item A Few \\svg{bronze} Units with the \\textit{highest} Recruitment cost\n"
-#| "  \\item A Pack of \\svg{bronze} Units with the \\textit{lowest} Recruitment cost\n"
-#| "\\end{itemize}\n"
-#| "\n"
-msgid ""
-"\\textbf{Starting Units:}\n"
-"\\begin{itemize}\n"
-"  \\item A ``Few'' \\svg{bronze} Units with the \\textit{highest} Recruitment cost\n"
-"  \\item A ``Pack'' of \\svg{bronze} Units with the \\textit{lowest} Recruitment cost\n"
-"\\end{itemize}\n"
-"\n"
-msgstr ""
-"\\textbf{Úvodní Jednotky:}\n"
-"\\begin{itemize}\n"
-"  \\item Hrstka \\svg{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
-"  \\item Tlupu \\svg{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
-"\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
