--- a/translations/inferno_steadwicks_fall.tex/pl.po
+++ b/translations/inferno_steadwicks_fall.tex/pl.po
@@ -315,14 +315,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:36
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item A Few Troglodytes\n"
-#| "  \\item A Few Evil Eyes\n"
-#| "  \\item A Pack of Familiars\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item A ``Few'' Troglodytes\n"
@@ -332,9 +325,9 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Garstka Troglodytów\n"
-"  \\item Garstka Złych Oczu\n"
-"  \\item Grupa Chowańców\n"
+"  \\item ,,Garstka'' Troglodytów\n"
+"  \\item ,,Garstka'' Złych Oczu\n"
+"  \\item ,,Grupa'' Chowańców\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -350,16 +343,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:46
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Bonus:} Choose one of the following options:\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Add a Pack of Harpies to your hand.\n"
-#| "  \\item Add a Pack of Magogs to your hand.\n"
-#| "  \\item Add an Ammo Cart to your hand.\n"
-#| "  \\item Search (4) the Spell Deck.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Bonus:} Choose one of the following options:\n"
 "\\begin{itemize}\n"
@@ -372,8 +356,8 @@ msgid ""
 msgstr ""
 "\\textbf{Bonus:} Wybierz jedną z następujących opcji:\n"
 "\\begin{itemize}\n"
-"  \\item Dodaj Grupę Harpii do swojej ręki.\n"
-"  \\item Dodaj Grupę Magogów do swojej ręki.\n"
+"  \\item Dodaj ,,Grupę'' Harpii do swojej ręki.\n"
+"  \\item Dodaj ,,Grupę'' Magogów do swojej ręki.\n"
 "  \\item Dodaj Wóz z Amunicją do swojej ręki.\n"
 "  \\item Przeszukaj (4) Talię Zaklęć.\n"
 "\\end{itemize}\n"
@@ -381,35 +365,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:75
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{General Kendal (Castle):}\n"
-#| "\\begin{itemize}\n"
-#| "    \\item \\textbf{Army:}\n"
-#| "    \\begin{itemize}\n"
-#| "        \\item A Pack of Archangels\n"
-#| "        \\item A Pack of Champions\n"
-#| "        \\item A Pack of Zealots\n"
-#| "        \\item A Pack of Crusaders\n"
-#| "        \\item A Pack of Griffins\n"
-#| "        \\item A Balista War Machine\n"
-#| "    \\end{itemize}\n"
-#| "    \\item \\textbf{AI Deck:}\n"
-#| "    \\begin{itemize}\n"
-#| "        \\item 5 × Might \\svg[12]{might} Card\n"
-#| "        \\item 1 × Magic \\svg{magic} Card\n"
-#| "        \\item 3 × Skill \\svg{skill} Card\n"
-#| "    \\end{itemize}\n"
-#| "    \\item \\textbf{Spells:}\n"
-#| "    \\begin{itemize}\n"
-#| "        \\item 2 × Haste\n"
-#| "    \\end{itemize}\n"
-#| "    \\item \\textbf{Abilities:}\n"
-#| "    \\begin{itemize}\n"
-#| "        \\item Artillery\\footnote{For General Kendal, the Artillery Ability Card always resolves the Expert effect and the Ballista War Machine Activates every time the Artillery Ability Card is drawn, as well as at the beginning of a Combat Round.}\n"
-#| "    \\end{itemize}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{General Kendal (Castle):}\n"
 "\\begin{itemize}\n"
@@ -443,11 +399,11 @@ msgstr ""
 "\\begin{itemize}\n"
 "    \\item \\textbf{Armia:}\n"
 "    \\begin{itemize}\n"
-"        \\item Grupa Archaniołów\n"
-"        \\item Grupa Czempionów\n"
-"        \\item Grupa Kapłanów\n"
-"        \\item Grupa Krzyżowców\n"
-"        \\item Grupa Gryfów\n"
+"        \\item ,,Grupa'' Archaniołów\n"
+"        \\item ,,Grupa'' Czempionów\n"
+"        \\item ,,Grupa'' Kapłanów\n"
+"        \\item ,,Grupa'' Krzyżowców\n"
+"        \\item ,,Grupa'' Gryfów\n"
 "        \\item Machina Wojenna Balista\n"
 "    \\end{itemize}\n"
 "    \\item \\textbf{Talia AI:}\n"
