--- a/translations/bloody_grail.tex/bloody_grail.tex.pot
+++ b/translations/bloody_grail.tex/bloody_grail.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-12-19 07:58+0000\n"
+"POT-Creation-Date: 2025-12-19 15:06+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -38,6 +38,18 @@ msgstr ""
 #, no-wrap
 msgid ""
 "{2}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: coops/sentinels.tex:32 clash/bloody_grail.tex:27 clash/the_hunt.tex:29
+#, no-wrap
+msgid ""
+"\\textbf{Starting Units:}\n"
+"\\begin{itemize}\n"
+"  \\item A ``Pack'' of the cheapest \\svg{bronze} Units\n"
+"  \\item A ``Few'' of the most expensive \\svg{bronze} Units\n"
+"\\end{itemize}\n"
 "\n"
 msgstr ""
 
@@ -131,18 +143,6 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\textbf{Starting Resources:} 13 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
-#: clash/bloody_grail.tex:27
-#, no-wrap
-msgid ""
-"\\textbf{Starting Units:}\n"
-"\\begin{itemize}\n"
-"  \\item A ``Few'' \\svg{bronze} Units with the \\textit{highest} Recruitment cost\n"
-"  \\item A ``Pack'' of \\svg{bronze} Units with the \\textit{lowest} Recruitment cost\n"
-"\\end{itemize}\n"
 "\n"
 msgstr ""
 
