--- a/translations/bloody_grail.tex/de.po
+++ b/translations/bloody_grail.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-12-19 07:58+0000\n"
+"POT-Creation-Date: 2025-12-19 15:06+0000\n"
 "PO-Revision-Date: 2025-06-23 13:02+0000\n"
 "Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -43,6 +43,23 @@ msgid ""
 "\n"
 msgstr ""
 "{2}\n"
+"\n"
+
+#. type: multicols*
+#: coops/sentinels.tex:32 clash/bloody_grail.tex:27 clash/the_hunt.tex:29
+#, fuzzy, no-wrap
+msgid ""
+"\\textbf{Starting Units:}\n"
+"\\begin{itemize}\n"
+"  \\item A ``Pack'' of the cheapest \\svg{bronze} Units\n"
+"  \\item A ``Few'' of the most expensive \\svg{bronze} Units\n"
+"\\end{itemize}\n"
+"\n"
+msgstr ""
+"\\textbf{Starteinheiten:}\n"
+"\\begin{itemize}\n"
+"  \\item  Wenige \\svg{bronze}-Einheiten eurer Wahl\n"
+"\\end{itemize}\n"
 "\n"
 
 #. type: multicols
@@ -158,31 +175,6 @@ msgid ""
 "\n"
 msgstr ""
 "\\textbf{Startressourcen:} 13 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
-"\n"
-
-#. type: multicols*
-#: clash/bloody_grail.tex:27
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Units:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item A Pack of \\svg{bronze} Units with the \\textit{lowest} Recruitment cost\n"
-#| "  \\item A Few \\svg{bronze} Units with the \\textit{highest} Recruitment cost\n"
-#| "\\end{itemize}\n"
-#| "\n"
-msgid ""
-"\\textbf{Starting Units:}\n"
-"\\begin{itemize}\n"
-"  \\item A ``Few'' \\svg{bronze} Units with the \\textit{highest} Recruitment cost\n"
-"  \\item A ``Pack'' of \\svg{bronze} Units with the \\textit{lowest} Recruitment cost\n"
-"\\end{itemize}\n"
-"\n"
-msgstr ""
-"\\textbf{Starteinheiten:}\n"
-"\\begin{itemize}\n"
-"  \\item Ein Rudel \\svg{bronze}-Einheiten mit den \\textit{niedrigsten} Rekrutierungskosten\n"
-"  \\item Wenige \\svg{bronze}-Einheiten mit den \\textit{höchsten} Rekrutierungskosten\n"
-"\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
