--- a/translations/castle_sicilian_dragon.tex/pl.po
+++ b/translations/castle_sicilian_dragon.tex/pl.po
@@ -320,15 +320,12 @@ msgstr ""
 
 #. type: multicols
 #: campaigns/castle_sicilian_dragon.tex:38
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Pack of Liches, a Few Dread Knights, a Few Ghost Dragons\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Enemy Army:} A ``Pack'' of Skeletons, a ``Pack'' of Zombies, a ``Pack'' of Liches, a ``Few'' Dread Knights, a ``Few'' Ghost Dragons\n"
 "\n"
 msgstr ""
-"\\textbf{Wroga Armia:} Grupa Szkieletów, Grupa Zombie, Grupa Liczy, Garstka Rycerzy Grozy, Garstka Upiornych Smoków\n"
+"\\textbf{Wroga Armia:} ,,Grupa'' Szkieletów, ,,Grupa'' Zombie, ,,Grupa'' Liczy, ,,Garstka'' Rycerzy Grozy, ,,Garstka'' Upiornych Smoków\n"
 "\n"
 
 #. type: multicols*
@@ -874,14 +871,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/castle_sicilian_dragon.tex:220
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item \\textcolor{darkcandyapplered}{Add a Few Archangels to your army.}\n"
-#| "  \\item \\textcolor{darkcandyapplered}{You may now teleport to the enemy town on Tile S1.\n"
-#| "    If you choose not to, you may in the future by spending one \\svg{movement-red} at this Obelisk.}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item \\textcolor{darkcandyapplered}{Add a ``Few'' Archangels to your army.}\n"
@@ -891,7 +881,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item \\textcolor{darkcandyapplered}{Dodaj Garstkę Archaniołów do swojej armii.}\n"
+"  \\item \\textcolor{darkcandyapplered}{Dodaj ,,Garstkę'' Archaniołów do swojej armii.}\n"
 "  \\item \\textcolor{darkcandyapplered}{Możesz teraz teleportować się do miasta wroga na Kafelku S1.\n"
 "  Jeśli nie zdecydujesz się na to teraz, możesz to zrobić później, wydając jeden \\svg{movement-red} przy tym Obelisku.}\n"
 "\\end{itemize}\n"
