--- a/translations/castle_two_knights_defense.tex/pl.po
+++ b/translations/castle_two_knights_defense.tex/pl.po
@@ -405,15 +405,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/castle_two_knights_defense.tex:37
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Pack of Liches, a Pack of Dread Knights\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Enemy Army:} A ``Pack'' of Skeletons, a ``Pack'' of Zombies, a ``Pack'' of Liches, a ``Pack'' of Dread Knights\n"
 "\n"
 msgstr ""
-"\\textbf{Armia Wroga:} Grupa Szkieletów, Grupa Zombie, Grupa Liczy, Grupa Rycerzy Grozy\n"
+"\\textbf{Armia Wroga:} ,,Grupa'' Szkieletów, ,,Grupa'' Zombie, ,,Grupa'' Liczy, ,,Grupa'' Rycerzy Grozy\n"
 "\n"
 
 #. type: multicols*
@@ -536,13 +533,7 @@ msgstr ""
 
 #. type: multicols
 #: campaigns/castle_two_knights_defense.tex:118
-#, fuzzy, no-wrap
-#| msgid ""
-#| "  \\item After defeating the neutral army at the Dragon Utopia, add a random dragon from the \\svg{azure} Azure neutral Deck to your army.\n"
-#| "  \\item The enemy army follows the normal AI movement rules, stopping to capture Settlements and Mines, with its ultimate goal to reach the Dragon Utopia.\n"
-#| "  \\item If the enemy army reaches the Dragon Utopia before you do, flip the Pack side of Dread Knights to Few and add a Pack of Ghost Dragons.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "  \\item After defeating the neutral army at the Dragon Utopia, add a random dragon from the \\svg{azure} Azure neutral Deck to your army.\n"
 "  \\item The enemy army follows the normal AI movement rules, stopping to capture Settlements and Mines, with its ultimate goal to reach the Dragon Utopia.\n"
@@ -552,7 +543,7 @@ msgid ""
 msgstr ""
 "  \\item Po pokonaniu neutralnej armii w Smoczej Utopii, dodaj losowego smoka z neutralnej Talii \\svg{azure} do swojej armii.\n"
 "  \\item Wroga armia porusza się zgodnie z normalnymi zasadami ruchu AI, zatrzymując się, by przejąć Osady i Kopalnie, a jej ostatecznym celem jest dotarcie do Smoczej Utopii.\n"
-"  \\item Jeśli wroga armia dotrze do Smoczej Utopii przed tobą, odwróć Grupę Rycerzy Grozy na stronę Garstki i dodaj Grupę Upiornych Smoków.\n"
+"  \\item Jeśli wroga armia dotrze do Smoczej Utopii przed tobą, odwróć ,,Grupę'' Rycerzy Grozy na stronę ,,Garstki'' i dodaj ,,Grupę'' Upiornych Smoków.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -675,15 +666,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/castle_two_knights_defense.tex:163
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textcolor{darkcandyapplered}{Add a Few Champions to your army.}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textcolor{darkcandyapplered}{Add a ``Few'' Champions to your army.}\n"
 "\n"
 msgstr ""
-"\\textcolor{darkcandyapplered}{Dodaj Garstkę Czempionów do swojej armii.}\n"
+"\\textcolor{darkcandyapplered}{Dodaj ,,Garstkę'' Czempionów do swojej armii.}\n"
 "\n"
 
 #. type: multicols*
