--- a/translations/force_of_will.tex/pl.po
+++ b/translations/force_of_will.tex/pl.po
@@ -217,13 +217,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/force_of_will.tex:29 clash/dragoncurse_castle.tex:32
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Units:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 3 × A Few \\svg{bronze} Units\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
@@ -233,7 +227,7 @@ msgid ""
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item 3 × Garstka \\svg{bronze} Jednostek\n"
+"  \\item 2 × ,,Garstka'' najtańszych \\svg{bronze} Jednostek\n"
 "\\end{itemize}\n"
 "\n"
 
