--- a/translations/inferno_deal_with_the_devil.tex/pl.po
+++ b/translations/inferno_deal_with_the_devil.tex/pl.po
@@ -329,14 +329,7 @@ msgstr ""
 
 #. type: multicols
 #: campaigns/inferno_deal_with_the_devil.tex:40
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item A Few Magogs\n"
-#| "  \\item A Pack of Familiars\n"
-#| "  \\item A Pack of Cerebri\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item A ``Few'' Magogs\n"
@@ -346,9 +339,9 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Garstka Magogów\n"
-"  \\item Grupa Chowańców\n"
-"  \\item Grupa Cerebrów\n"
+"  \\item ,,Garstka'' Magogów\n"
+"  \\item ,,Grupa'' Chowańców\n"
+"  \\item ,,Grupa'' Cerebrów\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -871,39 +864,7 @@ msgstr ""
 
 #. type: table*
 #: campaigns/inferno_deal_with_the_devil.tex:267
-#, fuzzy, no-wrap
-#| msgid ""
-#| "[!hb]\n"
-#| "  \\pagetarget{Steadwick's Fall AI}{}\n"
-#| "  \\hommtable[]{37.5}{\n"
-#| "    \\centering\n"
-#| "    \\medskip\n"
-#| "    \\textbf{AI Hero Setup}\\\\\n"
-#| "    \\medskip\n"
-#| "    \\begin{tabularx}{0.95\\linewidth}{>{\\centering}p{0.12\\linewidth}>{\\raggedright\\arraybackslash}p{0.25\\linewidth}>{\\centering\\arraybackslash}X>{\\centering\\arraybackslash}p{0.28\\linewidth}}\n"
-#| "      \\darkcell{Enemy} & \\darkcell{Units} & \\darkcell{AI Deck} & \\darkcell{Artifacts/Abilities} \\\\\n"
-#| "      \\darkcellleft[2.8]{Rampart Charging Army \\#1}\n"
-#| "      & \\lightcellleft[2.8]{Few Unicorns\\\\Pack of Pegasi\\\\Pack of Elves\\\\Pack of Dwarves\\\\Few Centaurs}\n"
-#| "      & \\makebox[129pt][r]{\\multirow{4}{*}[12.65ex]{\\lightcellleft[11.75]{3~×~Might \\svg[12]{might-yellow} Card\\\\2~×~Skill \\svg{skill-yellow} Card \\\\\\phantom{.}\\\\ \\textit{Armies use the same Deck. Reshuffle after every Combat.}}}}\n"
-#| "      & \\makebox[147pt][r]{\\multirow{4}{*}[12.65ex]{\\lightcellleft[11.75]{1~×~Shield~of~the Damned \\textit{(Top effect)}\\\\1~×~Sword~of~Hellfire \\textit{(Top effect)}\\\\\\phantom{.}\\\\ \\textit{Armies use the same Deck. Reshuffle after every Combat.}}}} \\\\\n"
-#| "      \\darkcellleft[2.8]{Castle Charging Army \\#1}\n"
-#| "      & \\lightcellleft[2.8]{Few Champions\\\\Pack of Zealots\\\\Pack of Griffins\\\\Pack of Elves\\\\Pack of Marksmen}\n"
-#| "      &\n"
-#| "      & \\\\\n"
-#| "      \\darkcellleft[2.8]{Rampart Charging Army \\#2}\n"
-#| "      & \\lightcellleft[2.8]{Pack of Unicorns\\\\Pack of Dendroids\\\\Few Pegasi\\\\Pack of Elves\\\\Pack of Dwarves}\n"
-#| "      &\n"
-#| "      & \\\\\n"
-#| "      \\darkcellleft[2.8]{Castle Charging Army \\#2}\n"
-#| "      & \\lightcellleft[2.8]{Pack of Champions\\\\Pack of Zealots\\\\Few Crusaders\\\\Few Griffins\\\\Pack of Halberdiers}\n"
-#| "      &\n"
-#| "      & \\\\\n"
-#| "      \\darkcellleft[4.4]{Final Charging Army}\n"
-#| "      & \\lightcellleft[4.4]{Few Archangels\\\\Pack of Unicorns\\\\Pack of Champions\\\\Pack of Zealots\\\\Pack of Griffins\\\\Ballista War Machine}\n"
-#| "      & \\lightcellleft[4.4]{3~×~Might \\svg[12]{might-yellow} Card\\\\3~×~Skill \\svg{skill-yellow} Card}\n"
-#| "    & \\lightcellleft[4.4]{1~×~Shield~of~the Damned \\textit{(Top effect)}\\\\1~×~Sword~of~Hellfire \\textit{(Top effect)}\\\\1~×~Ballistics \\textit{(Basic effect)}\\\\1~×~First~Aid \\textit{(Expert effect)}} \\\\ \\end{tabularx}\n"
-#| "  }\n"
-#| "\\vspace*{-5em}"
+#, no-wrap
 msgid ""
 "[!hb]\n"
 "  \\pagetarget{Steadwick's Fall AI}{}\n"
@@ -947,23 +908,23 @@ msgstr ""
 "    \\begin{tabularx}{0.95\\linewidth}{>{\\centering}p{0.12\\linewidth}>{\\raggedright\\arraybackslash}p{0.25\\linewidth}>{\\centering\\arraybackslash}X>{\\centering\\arraybackslash}p{0.28\\linewidth}}\n"
 "      \\darkcell{Wróg} & \\darkcell{Jednostki} & \\darkcell{Talia AI} & \\darkcell{Artefakty/Zdolności} \\\\\n"
 "      \\darkcellleft[2.8]{Szarżująca Armia Bastionu \\#1}\n"
-"      & \\lightcellleft[2.8]{Garstka Jednorożców\\\\Grupa Pegazów\\\\Grupa Elfów\\\\Grupa Krasnoludów\\\\Garstka Centaurów}\n"
+"      & \\lightcellleft[2.8]{,,Garstka'' Jednorożców\\\\,,Grupa'' Pegazów\\\\,,Grupa'' Elfów\\\\,,Grupa'' Krasnoludów\\\\,,Garstka'' Centaurów}\n"
 "      & \\makebox[129pt][r]{\\multirow{4}{*}[12.65ex]{\\lightcellleft[11.75]{3~×~Karta Mocy \\svg[12]{might-yellow}\\\\2~×~Karta Umiejętności \\svg{skill-yellow} \\\\\\phantom{.}\\\\ \\textit{Armie używają tej samej Talii. Tasuj po każdej Walce.}}}}\n"
 "      & \\makebox[147pt][r]{\\multirow{4}{*}[12.65ex]{\\lightcellleft[11.75]{1~×~Tarcza Potępionych \\textit{(Górny efekt)}\\\\1~×~Miecz Ognia Piekielnego \\textit{(Górny efekt)}\\\\\\phantom{.}\\\\ \\textit{Armie używają tej samej Talii. Tasuj po każdej Walce.}}}} \\\\\n"
 "      \\darkcellleft[2.8]{Szarżująca Armia Zamku \\\\ \\#1}\n"
-"      & \\lightcellleft[2.8]{Garstka Czempionów\\\\Grupa Kapłanów\\\\Grupa Gryfów\\\\Grupa Elfów\\\\Grupa Kuszników}\n"
+"      & \\lightcellleft[2.8]{,,Garstka'' Czempionów\\\\,,Grupa'' Kapłanów\\\\,,Grupa'' Gryfów\\\\,,Grupa'' Elfów\\\\,,Grupa'' Kuszników}\n"
 "      &\n"
 "      & \\\\\n"
 "      \\darkcellleft[2.8]{Szarżująca Armia Bastionu \\#2}\n"
-"      & \\lightcellleft[2.8]{Grupa Jednorożców\\\\Grupa Entów\\\\Garstka Pegazów\\\\Grupa Elfów\\\\Grupa Krasnoludów}\n"
+"      & \\lightcellleft[2.8]{,,Grupa'' Jednorożców\\\\,,Grupa'' Entów\\\\,,Garstka'' Pegazów\\\\,,Grupa'' Elfów\\\\,,Grupa'' Krasnoludów}\n"
 "      &\n"
 "      & \\\\\n"
 "      \\darkcellleft[2.8]{Szarżująca Armia Zamku \\\\ \\#2}\n"
-"      & \\lightcellleft[2.8]{Grupa Czempionów\\\\Grupa Kapłanów\\\\Garstka Krzyżowców\\\\Garstka Gryfów\\\\Grupa Halabardników}\n"
+"      & \\lightcellleft[2.8]{,,Grupa'' Czempionów\\\\,,Grupa'' Kapłanów\\\\,,Garstka'' Krzyżowców\\\\,,Garstka'' Gryfów\\\\,,Grupa'' Halabardników}\n"
 "      &\n"
 "      & \\\\\n"
 "      \\darkcellleft[4.4]{Ostatnia Szarżująca Armia}\n"
-"      & \\lightcellleft[4.4]{Garstka Archaniołów\\\\Grupa Jednorożców\\\\Grupa Czempionów\\\\Grupa Kapłanów\\\\Grupa Gryfów\\\\Machina Wojenna Balista}\n"
+"      & \\lightcellleft[4.4]{,,Garstka'' Archaniołów\\\\,,Grupa'' Jednorożców\\\\,,Grupa'' Czempionów\\\\,,Grupa'' Kapłanów\\\\,,Grupa'' Gryfów\\\\Machina Wojenna Balista}\n"
 "      & \\lightcellleft[4.4]{3~×~Karta Mocy \\svg[12]{might-yellow}\\\\3~×~Karta Umiejętności \\svg{skill-yellow}}\n"
 "    & \\lightcellleft[4.4]{1~×~Tarcza Potępionych \\textit{(Górny efekt)}\\\\1~×~Miecz Ognia Piekielnego \\textit{(Górny efekt)}\\\\1~×~Balistyka \\textit{(Efekt Podstawowy)}\\\\1~×~Pierwsza Pomoc \\textit{(Efekt Mistrzowski)}} \\\\ \\end{tabularx}\n"
 "  }\n"
