--- a/translations/inferno_devilish_plan.tex/pl.po
+++ b/translations/inferno_devilish_plan.tex/pl.po
@@ -340,13 +340,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:39
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item A Pack of Familiars\n"
-#| "  \\item A Few Magogs\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item A ``Pack'' of Familiars\n"
@@ -355,8 +349,8 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Grupa Chowańców\n"
-"  \\item Garstka Magogów\n"
+"  \\item ,,Grupa'' Chowańców\n"
+"  \\item ,,Garstka'' Magogów\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -382,19 +376,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:61
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Gold Dragons Army (Rampart):}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item \\textbf{Army:}\n"
-#| "    \\begin{itemize}\n"
-#| "      \\item A Pack of Gold Dragons\n"
-#| "      \\item A Pack of Unicorns\n"
-#| "      \\item A Pack of Dendroids\n"
-#| "      \\item A Pack of Centaurs\n"
-#| "    \\end{itemize}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Gold Dragons Army (Rampart):}\n"
 "\\begin{itemize}\n"
@@ -412,39 +394,17 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textbf{Armia:}\n"
 "    \\begin{itemize}\n"
-"      \\item Grupa Złotych Smoków\n"
-"      \\item Grupa Jednorożców\n"
-"      \\item Grupa Drzewców\n"
-"      \\item Grupa Centaurów\n"
+"      \\item ,,Grupa'' Złotych Smoków\n"
+"      \\item ,,Grupa'' Jednorożców\n"
+"      \\item ,,Grupa'' Drzewców\n"
+"      \\item ,,Grupa'' Centaurów\n"
 "    \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:82
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Ivor (Rampart):}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item \\textbf{Army:}\n"
-#| "    \\begin{itemize}\n"
-#| "      \\item A Few Elves\n"
-#| "      \\item Neutral Army at the same Level as your Hero\\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}\n"
-#| "    \\end{itemize}\n"
-#| "  \\item \\textbf{AI Deck:}\n"
-#| "    \\begin{itemize}\n"
-#| "      \\item 1 × Might \\svg[12]{might} Card\n"
-#| "      \\item 2 × Magic \\svg{magic} Card\n"
-#| "      \\item 1 × Skill \\svg{skill} Card\n"
-#| "    \\end{itemize}\n"
-#| "  \\item \\textbf{Spells:}\n"
-#| "    \\begin{itemize}\n"
-#| "      \\item 1 × Precision\\footnote{It resolves on the first \\svg{unit_ranged} Unit able to make a \\svg{unit_ranged} attack}\n"
-#| "      \\item 1 × Magic Arrow\n"
-#| "    \\end{itemize}\n"
-#| "  \\item \\textbf{Abilities:} Archery (always Basic effect)\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Ivor (Rampart):}\n"
 "\\begin{itemize}\n"
@@ -472,7 +432,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textbf{Armia:}\n"
 "    \\begin{itemize}\n"
-"      \\item Garstka Elfów\n"
+"      \\item ,,Garstka'' Elfów\n"
 "      \\item Neutralna Armia na tym samym Poziomie co twój Bohater\\footnote{Zobacz stronę 35. ,,Tabela Poziomów Trudności Pola'' w Księdze Zasad, aby uzyskać szczegółowe informacje na temat Neutralnych Jednostek.}\n"
 "    \\end{itemize}\n"
 "  \\item \\textbf{Talia AI:}\n"
@@ -694,14 +654,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:156
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{9} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Reinforce the Few Elves in Ivor's army to a Pack of Elves.\n"
-#| "  \\item Add an Ammo Cart to Ivor's Army.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{9} Round:}\n"
 "\\begin{itemize}\n"
@@ -712,7 +665,7 @@ msgid ""
 msgstr ""
 "\\textbf{9. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Garstka Elfów z Armii Ivora zostaje Wzmocniona do Grupy Elfów.\n"
+"  \\item ,,Garstka'' Elfów z Armii Ivora zostaje Wzmocniona do ,,Grupy'' Elfów.\n"
 "  \\item Armia Ivora zyskuje Wóz z Amunicją.\n"
 "\\end{itemize}\n"
 "\n"
