--- a/translations/trial_by_combat.tex/pl.po
+++ b/translations/trial_by_combat.tex/pl.po
@@ -120,14 +120,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/trial_by_combat.tex:25
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Units:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item A Few cheapest \\svg{silver} Units\n"
-#| "  \\item A chosen Neutral \\svg{bronze} Unit matching the player's Faction\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
@@ -138,7 +131,7 @@ msgid ""
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item Garstka najtańszych \\svg{silver} Jednostek\n"
+"  \\item ,,Garstka'' najtańszych \\svg{silver} Jednostek\n"
 "  \\item Wybrana Neutralna \\svg{bronze} Jednostka odpowiadająca Fakcji gracza\n"
 "\\end{itemize}\n"
 "\n"
